fixed the navbar and strange layout issues.

--- a/NatureCottages/wwwroot/css/Site.css
+++ b/NatureCottages/wwwroot/css/Site.css
@@ -1,3 +1,7 @@
-﻿#body {
-    margin: 10px;
+﻿
+
+.card-img {
+    width: 100%;
+    height: 100%;
 }
+
